--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <h1 class="header"></h1>
+    <h1 class="header">Etch-a-sketch</h1>
+
+    <button class = 'btn'> Clear!</button>
 
     <div class = 'container'></div>
 
