--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <button class = 'btn'> Clear!</button>
 
-    <div class = 'container'></div>
+    <div id = 'container'></div>
 
     
 </body>
