--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <h1 class="header">Etch-a-sketch</h1>
 
-    <button class = 'btn'> Clear!</button>
+    <button class = 'btn'> Clear</button>
+
+    
 
     <div id = 'container'></div>
 
